--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -32,8 +32,8 @@ update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6
 网易云音乐 = select,🎵 网易云音乐
 ✈️PROXY = select,Auto,Manual
 Auto = fallback,main(Auto),backup(Auto)
-main(Auto) = url-test,flower,use=true,policy-regex-filter=港
-backup(Auto) = url-test,one Dollar,use=true,policy-regex-filter=港
+main(Auto) = url-test,flower,use=true,policy-regex-filter=港|台
+backup(Auto) = url-test,one Dollar,use=true,#policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
 main (Manual) = select,flower,use=true
 backup (Manual) = select,one Dollar,use=true
@@ -53,7 +53,7 @@ DOMAIN-KEYWORD,dmm,DMM
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/domestic.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Tiktok_domain.yaml,TIKTOK
-RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/BilibiliHMT_domain.yaml,DIRECT
+#RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/BilibiliHMT_domain.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt,DIRECT,no-resolve
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Telegram_ip.yaml,✈️PROXY,no-resolve
 GEOIP,CN,DIRECT
