--- a/Clash config/stash.yaml
+++ b/Clash config/stash.yaml
@@ -449,7 +449,7 @@ proxy-groups:
     use:
      - Airport A
     proxies:
-      - main(Auto)
+      - backup(Auto)
     url: 'https://e-hentai.org'
     interval: 900
     tolerance: 50 
@@ -460,7 +460,7 @@ proxy-groups:
     use:
      - Airport A
     proxies:
-      - main(Auto)
+      - backup(Auto)
     filter: '^(?!.*(日|Japan|jp))'
     url: 'https://javdb.com'
     interval: 900
@@ -472,7 +472,7 @@ proxy-groups:
     use:
      - Airport A
     proxies:
-      - main(Auto)
+      - backup(Auto)
     filter: '日|Japan|jp'
     url: 'https://dmm.co.jp'
     interval: 900
