--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -31,14 +31,14 @@ update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6
 [Proxy Group]
 网易云音乐 = select,🎵 网易云音乐
 ✈️PROXY = select,Auto,Manual
-Auto = fallback,main(Auto),backup(Auto)
-main(Auto) = url-test,flower,use=true,policy-regex-filter=港|台
-backup(Auto) = url-test,one Dollar,use=true,#policy-regex-filter=港
+Auto = fallback,main(Auto),backup(Auto),interval=60,timeout=10,select=0,url=https://www.youtube.com/generate_204
+main(Auto) = url-test,flower,use=true,policy-regex-filter=港|台,timeout=10,tolerance=50,interval=600,select=0,url=https://www.youtube.com/generate_204
+backup(Auto) = url-test,one Dollar,use=true,timeout=10,tolerance=50,interval=600,select=0,url=https://www.youtube.com/generate_204 #policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
 main (Manual) = select,flower,use=true
 backup (Manual) = select,one Dollar,use=true
-TikTok = url-test,flower,use=true,policy-regex-filter=台湾|TW
-DMM = select,flower,use=true,policy-regex-filter=日本
+#TikTok = url-test,flower,use=true,policy-regex-filter=台湾|TW
+DMM = select,flower,use=true,policy-regex-filter=日本,timeout=10,tolerance=50,interval=600,select=0,url=https://dmm.co.jp
 
 
 [Rule]
@@ -52,7 +52,7 @@ RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/
 DOMAIN-KEYWORD,dmm,DMM
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/domestic.yaml,DIRECT
-RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Tiktok_domain.yaml,TIKTOK
+#RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Tiktok_domain.yaml,TIKTOK
 #RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/BilibiliHMT_domain.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt,DIRECT,no-resolve
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Telegram_ip.yaml,✈️PROXY,no-resolve
