--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -180,10 +180,10 @@ dns:
       - 223.6.6.6       
       - 119.29.29.29
   nameserver:
-      - https://doh.opendns.com/dns-query#DIRECT
+      - https://doh.opendns.com/dns-query
       #- tls://1dot1dot1dot1.cloudflare-dns.com#DNS
       #- tls://dns.google#DNS
-      - tls://8.8.4.4#DIRECT
+      - tls://8.8.4.4
   proxy-server-nameserver:
       - 119.29.29.29      
       - 223.6.6.6         
