rm music.desperadoj.com from host

--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -61,7 +61,7 @@ FINAL,✈️PROXY
 
 [Host]
 localhost = 127.0.0.1
-music.desperadoj.com = 101.132.192.212
+#music.desperadoj.com = 101.132.192.212
 
 [URL Rewrite]
 ^https?://(www.)?g.cn https://www.google.com 302
