--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -887,6 +887,7 @@ rules:
     
     - GEOSITE,openai,🇺🇸AI
     - DOMAIN,bard.google.com,🇺🇸AI
+    - DOMAIN-SUFFIX,anthropic.com,🇺🇸AI
     
     - DOMAIN-SUFFIX,ttvnw.net,EsportsVid #proxy group
     
