- DOMAIN-SUFFIX,claude.ai,🇺🇸AI

--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -888,6 +888,8 @@ rules:
     - GEOSITE,openai,🇺🇸AI
     - DOMAIN,bard.google.com,🇺🇸AI
     - DOMAIN-SUFFIX,anthropic.com,🇺🇸AI
+    - DOMAIN-SUFFIX,claude.ai,🇺🇸AI
+
     
     - DOMAIN-SUFFIX,ttvnw.net,EsportsVid #proxy group
     
