--- a/domestic.yaml
+++ b/domestic.yaml
@@ -73,7 +73,14 @@ payload:
 
   - DOMAIN-SUFFIX,rinuploads.org
 
-  - DOMAIN,818f63.dns.nextdns.io
+  #docker
+  - DOMAIN,d1q6f0aelx0por.cloudfront.net
+  - DOMAIN,d2wy8f7a9ursnm.cloudfront.net
+  - DOMAIN,d36jcksde1wxzq.cloudfront.net
+  - DOMAIN-SUFFIX,compose-spec.io
+  - DOMAIN-SUFFIX,docker.com
+  - DOMAIN-SUFFIX,docker.io
+  - DOMAIN-SUFFIX,dockerhub.com
   
   #switch game stop
   #- DOMAIN-SUFFIX,teknik.app
