use cf zerotrust as main dns

--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -180,7 +180,7 @@ dns:
       - 223.6.6.6       
       - 119.29.29.29
   nameserver:
-      - https://doh.opendns.com/dns-query
+      - https://fdyhoqa   .cloudflare-gateway.com/dns-query
       #- tls://1dot1dot1dot1.cloudflare-dns.com#DNS
       #- tls://dns.google#DNS
       - tls://8.8.4.4
