--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -183,7 +183,7 @@ dns:
       - https://fdyhoqa   .cloudflare-gateway.com/dns-query
       #- tls://1dot1dot1dot1.cloudflare-dns.com#DNS
       #- tls://dns.google#DNS
-      - tls://8.8.4.4
+      - tls://dns.google
   proxy-server-nameserver:
       - 119.29.29.29      
       - 223.6.6.6         
