--- a/domestic.yaml
+++ b/domestic.yaml
@@ -74,19 +74,21 @@ payload:
   - DOMAIN-SUFFIX,rinuploads.org
 
   #docker
-  - DOMAIN,d1q6f0aelx0por.cloudfront.net
-  - DOMAIN,d2wy8f7a9ursnm.cloudfront.net
-  - DOMAIN,d36jcksde1wxzq.cloudfront.net
-  - DOMAIN-SUFFIX,compose-spec.io
-  - DOMAIN-SUFFIX,docker.com
-  - DOMAIN-SUFFIX,docker.io
-  - DOMAIN-SUFFIX,dockerhub.com
+  #- DOMAIN,d1q6f0aelx0por.cloudfront.net
+  #- DOMAIN,d2wy8f7a9ursnm.cloudfront.net
+  #- DOMAIN,d36jcksde1wxzq.cloudfront.net
+  #- DOMAIN-SUFFIX,compose-spec.io
+  #- DOMAIN-SUFFIX,docker.com
+  #- DOMAIN-SUFFIX,docker.io
+  #- DOMAIN-SUFFIX,dockerhub.com
+  - DOMAIN,production.cloudflare.docker.com
+
   
   #switch game stop
   #- DOMAIN-SUFFIX,teknik.app
 
-  - DOMAIN,rito-news.iamantosik.me
-  - DOMAIN,d1isb7f40vy8e5.cloudfront.net
+  #- DOMAIN,rito-news.iamantosik.me
+  #- DOMAIN,d1isb7f40vy8e5.cloudfront.net
 
   - DOMAIN,music.desperadoj.com
 
