--- a/domestic.yaml
+++ b/domestic.yaml
@@ -83,7 +83,7 @@ payload:
   #- DOMAIN-SUFFIX,dockerhub.com
   - DOMAIN,production.cloudflare.docker.com
 
-  
+  - DOMAIN-SUFFIX,qbittorrent.org
   #switch game stop
   #- DOMAIN-SUFFIX,teknik.app
 
