--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -52,7 +52,7 @@
   #- DOMAIN-SUFFIX,vercel.com
   
   # Amazon cloudfront service
-  - DOMAIN-SUFFIX,cloudfront.net
+  #- DOMAIN-SUFFIX,cloudfront.net
 
   #new bing
   - DOMAIN-SUFFIX,bing.com
