- IP-CIDR,17.0.0.0/8,DIRECT ensure apple push notification fluency

--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -912,6 +912,7 @@ rules:
     
     - GEOSITE,apple@cn,DIRECT
     - GEOSITE,apple-cn,DIRECT
+    - IP-CIDR,17.0.0.0/8,DIRECT
     - RULE-SET,🍎Apple_domain,✈️PROXY
 
     - RULE-SET,Rockstar,DIRECT
