- AND,((DOMAIN-KEYWORD,DERP),(DOMAIN-SUFFIX,tailscale.com)),DIRECT add derp rule support

--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -932,7 +932,8 @@ rules:
     - RULE-SET,Telegram_ip,✈️PROXY,no-resolve
 
     - GEOIP,CN,DIRECT
-
+    
+    - AND,((DOMAIN-KEYWORD,DERP),(DOMAIN-SUFFIX,tailscale.com)),DIRECT
     # BLACKLIST MDOE
     - DST-PORT,80,DST-PORT
     - DST-PORT,443,DST-PORT
