--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -93,7 +93,7 @@ dns:
   enable: true
   listen: 0.0.0.0:7874
   # ipv6: false # when the false, response to AAAA questions will be empty
-
+  cache-algorithm: arc
   # These nameservers are used to resolve the DNS nameserver hostnames below.
   # Specify IP addresses only
   #default-nameserver:
