--- a/domestic.yaml
+++ b/domestic.yaml
@@ -92,6 +92,8 @@ payload:
   
   # DIRECT DOWNLOAD 
   - DOMAIN-SUFFIX,1fichier.com
+
+  - DOMAIN-SUFFIX,6bt0.com
   
   - DOMAIN,music.desperadoj.com
 
