--- a/domestic.yaml
+++ b/domestic.yaml
@@ -94,6 +94,9 @@ payload:
   - DOMAIN-SUFFIX,1fichier.com
 
   - DOMAIN-SUFFIX,6bt0.com
+
+  #lolesports
+  - DOMAIN,ikhsnhix8l.execute-api.us-west-2.amazonaws.com
   
   - DOMAIN,music.desperadoj.com
 
