--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -64,13 +64,13 @@
 
   # lol esports script
   #- DOMAIN-SUFFIX,lolesports.com
-  - DOMAIN,cdn.rgpub.io
-  - DOMAIN,ddragon.leagueoflegends.com
-  - DOMAIN,login.leagueoflegends.com
-  - DOMAIN,auth.riotgames.com
-  - DOMAIN,authenticate.riotgames.com
-  - DOMAIN,login.riotgames.com
-  - DOMAIN,login.playvalorant.com
+  #- DOMAIN,cdn.rgpub.io
+  #- DOMAIN,ddragon.leagueoflegends.com
+  #- DOMAIN,login.leagueoflegends.com
+  #- DOMAIN,auth.riotgames.com
+  #- DOMAIN,authenticate.riotgames.com
+  #- DOMAIN,login.riotgames.com
+  #- DOMAIN,login.playvalorant.com
 
   - DOMAIN-SUFFIX,bangumi.moe
   - DOMAIN-SUFFIX,mikanani.me
