--- a/Clash config/racknerd.yaml
+++ b/Clash config/racknerd.yaml
@@ -1,111 +1,111 @@
-# Port of HTTP(S) proxy server on the local end
+
 port: 7890
 
-# Port of SOCKS5 proxy server on the local end
+
 socks-port: 7891
 
-# Transparent proxy server port for Linux and macOS (Redirect TCP and TProxy UDP)
+
 redir-port: 7892
 
-# Transparent proxy server port for Linux (TProxy TCP and TProxy UDP)
+
 tproxy-port: 7893
 
-# HTTP(S) and SOCKS4(A)/SOCKS5 server on the same port
+
 mixed-port: 7890
 
-# authentication of local SOCKS5/HTTP(S) server
-# authentication:
-#  - "user1:pass1"
-#  - "user2:pass2"
 
-# Set to true to allow connections to the local-end server from
-# other LAN IP addresses
+
+
+
+
+
+
 allow-lan: false
 
-# This is only applicable when `allow-lan` is `true`
-# '*': bind all IP addresses
-# 192.168.122.11: bind a single IPv4 address
-# "[aaaa::a8aa:ff:fe09:57d8]": bind a single IPv6 address
+
+
+
+
 bind-address: '*'
 
-# Clash router working mode
-# rule: rule-based packet routing
-# global: all packets will be forwarded to a single endpoint
-# direct: directly forward the packets to the Internet
+
+
+
+
 mode: global
 
-# Clash by default prints logs to STDOUT
-# info / warning / error / debug / silent
+
+
 log-level: error
 
-# When set to false, resolver won't translate hostnames to IPv6 addresses
+
 ipv6: true
 
-# RESTful web API listening address
+
 external-controller: 127.0.0.1:9090
 
-# A relative path to the configuration directory or an absolute path to a
-# directory in which you put some static web resource. Clash core will then
-# serve it at `${API}/ui`.
-# external-ui: folder
 
-# Secret for the RESTful API (optional)
-# Authenticate by spedifying HTTP header `Authorization: Bearer ${secret}`
-# ALWAYS set a secret if RESTful API is listening on 0.0.0.0
-# secret: ""
 
-# Outbound interface name
-# interface-name: en0
 
-# Static hosts for DNS server and connection establishment (like /etc/hosts)
-#
-# Wildcard hostnames are supported (e.g. *.clash.dev, *.foo.*.example.com)
-# Non-wildcard domain names have a higher priority than wildcard domain names
-# e.g. foo.example.com > *.example.com > .example.com
-# P.S. +.foo.com equals to .foo.com and foo.com
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 hosts:
-  # '*.clash.dev': 127.0.0.1
-  # '.dev': 127.0.0.1
-  # 'alpha.clash.dev': '::1'
   
-  #dns
-  #'music.163-my-beloved.com': 76.76.21.21
-  #'msftconnecttest.com': 127.0.0.1
-  #'dns.google': 8.8.4.4
-  #'dns.nextdns.io': 45.11.104.186
-  #'1dot1dot1dot1.cloudflare-dns.com': 1.0.0.1
-#
-  ## Firebase Cloud Messaging
-  #'mtalk.google.com': 108.177.125.188
-  ## Google Dl
-  #'dl.google.com': 180.163.151.161
-  #'dl.l.google.com': 180.163.151.161
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
+  
+  
+  
+  
 
 profile:
-  # Store the `select` results in $HOME/.config/clash/.cache
-  # set false If you don't want this behavior
-  # when two different configurations have groups with the same name, the selected values are shared
+  
+  
+  
   store-selected: true
 
-# DNS server settings
-# This section is optional. When not present, the DNS server will be disabled.
+
+
 dns:
   enable: true
   listen: 0.0.0.0:7874
-  # ipv6: false # when the false, response to AAAA questions will be empty
-  cache-algorithm: arc
-  # These nameservers are used to resolve the DNS nameserver hostnames below.
-  # Specify IP addresses only
-  #default-nameserver:
-  #  - 119.29.29.29
-  #  - 223.5.5.5
-  enhanced-mode: fake-ip # or fake-ip
-  fake-ip-range: 198.18.0.1/16 # Fake IP addresses pool CIDR
-  # use-hosts: true # lookup hosts and return IP record
   
-  # Hostnames in this list will not be resolved with fake IPs
-  # i.e. questions to these domain names will always be answered with their
-  # real IP addresses
+  cache-algorithm: arc
+  
+  
+  
+  
+  
+  enhanced-mode: fake-ip 
+  fake-ip-range: 198.18.0.1/16 
+  
+  
+  
+  
+  
   fake-ip-filter:
     - '*.lan'
     - localhost.ptlogin2.qq.com
@@ -159,24 +159,24 @@ dns:
     - "+.stun.*.*.*.*"
     - "+.stun.*.*.*.*.*"
     - "+.dns.google"
-    #bark 
-    #- "+.api.day.app"
-    ##放行tracker和torrent
-    #- "tracker.*.*"
-    #- "*.tracker.*"
-    #- "*.tracker.*.*"
-    ##Qbittorrent推送
-    #- "+.alpinelinux.org"
-    #- "download.db-ip.com"
-    #- "cf.trackerslist.com"
-    #二维码问题
-    #- "+.tencent.com"
-    #- "+.qq.com"
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
 
-  # Supports UDP, TCP, DoT, DoH. You can specify the port to connect to.
-  # All DNS questions are sent directly to the nameserver, without proxies
-  # involved. Clash answers the DNS question with the first result gathered.
-  default-nameserver: #parse DOH/DOT/DOQ dns
+  
+  
+  
+  default-nameserver: 
       - 1.1.1.1       
       - 8.8.8.8
   nameserver:
@@ -185,150 +185,150 @@ dns:
   proxy-server-nameserver:
       - 1.1.1.1       
       - 8.8.8.8
-  # "domain-set:global,dns": 8.8.8.8 # global，dns 为 rule-providers 中的名为 global 和 dns 的规则提供器名字，且 behavior 必须为 domain 
-
-
-  # When `fallback` is present, the DNS server will send concurrent requests
-  # to the servers in this section along with servers in `nameservers`.                         #fallback is a history now, metaclash use nameserver-policy
-  #                                                                                             #for better DNS routing 
-  # The answers from fallback servers are used when the GEOIP country
-  # is not `CN`.
-  #fallback:
-  #   - tls://1dot1dot1dot1.cloudflare-dns.com#✈️PROXY
-  #   - tls://dns.google#✈️PROXY
-  ## If IP addresses resolved with servers in `nameservers` are in the specified
-  ## subnets below, they are considered invalid and results from `fallback`
-  ## servers are used instead.
-  ##
-  ## IP address resolved with servers in `nameserver` is used when
-  ## `fallback-filter.geoip` is true and when GEOIP of the IP address is `CN`.
-  ##
-  ## If `fallback-filter.geoip` is false, results from `nameserver` nameservers
-  ## are always used if not match `fallback-filter.ipcidr`.
-  ##
-  ## This is a countermeasure against DNS pollution attacks.
-  #fallback-filter:
-  #   geoip: true
-  #   geosite:
-  #     - "!cn"
-  #     - gfw
-  #   geoip-code: CN
-  #   ipcidr:
-  #     - 240.0.0.0/4
-  #   domain:
-  #     - '+.google.com'
-  #     - '+.facebook.com'
-  #     - '+.youtube.com'
   
-  # Lookup domains via specific nameservers
-  # nameserver-policy:
-  #   'www.baidu.com': '114.114.114.114'
-  #   '+.internal.crop.com': '10.0.0.1'
- 
-#
-# https://github.com/Dreamacro/clash/wiki/premium-core-features
-# 
-#interface-name: en0
 
-# tun:
-#   enable: true
-#   stack: system # or gvisor
-#   # dns-hijack:
-#   #   - 8.8.8.8:53
-#   #   - tcp://8.8.8.8:53
-#   macOS-auto-route: true # auto set global route
-#   macOS-auto-detect-interface: true # conflict with interface-name
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+ 
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 proxies:
-# 支持的协议及加密算法示例请查阅 Clash 项目 README 以使用最新格式：https://github.com/Dreamacro/clash/wiki/configuration
-
-  #  # Shadowsocks(Websocket + TLS)
-  #    type: ss
-  #  - name: "Sample 1"
-  #    server: server
-  #    port: 443
-  #    cipher: chacha20-ietf-poly1305
-  #    password: "password"
-  #    plugin: v2ray-plugin
-  #    plugin-opts:
-  #      mode: websocket # no QUIC now
-  #      tls: true # wss
-  #      # skip-cert-verify: true
-  #      # host: bing.com
-  #      path: "/s"
-  #      # mux: true
-  #      # headers:
-  #      #   custom: value
-  #
-  #  # VMess(Websocket + TLS)
-  #  - name: "Sample 2"
-  #    type: vmess
-  #    server: v2ray.cool
-  #    port: 443
-  #    uuid: a3482e88-686a-4a58-8126-99c9df64b7bf
-  #    alterId: 32
-  #    cipher: auto
-  #    # udp: true
-  #    tls: true
-  #    # skip-cert-verify: true
-  #    network: ws
-  #    ws-path: /v
-  #    # ws-headers:
-  #    #   Host: v2ray.com
-
-  # Trojan
-  # - name: "Sample 3"
-  #   type: trojan
-  #   server: server
-  #   port: 443
-  #   password: yourpsk
-  #   # udp: true
-  #   # sni: example.com # aka server name
-  #   # alpn:
-  #   #   - h2
-  #   #   - http/1.1
-  #   # skip-cert-verify: true
-#-
 
 
-# 服务器节点订阅
-proxy-providers:
-  # name: # Provider 名称
-  #   type: http # http 或 file
-  #   path: # 文件路径
-  #   url: # 只有当类型为 HTTP 时才可用，您不需要在本地空间中创建新文件。
-  #   interval: # 自动更新间隔，仅在类型为 HTTP 时可用
-  #   health-check: # 健康检查选项从此处开始
-  #     enable:
-  #     url: 
-  #     interval: 
-
-  #
-  # 「url」参数填写订阅链接
-  #
-  # 订阅链接可以使用 API 进行转换，如：https://dove.589669.xyz/web
   
-  # DuckDuckGoUS: #「冲鸭机场」订阅美国地区节点
-  #   type: http
-  #   url: "https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/ProxyList/US.yaml" # 放机场订阅链接
-  #   interval: 3600
-  #   path: ./Proxy/US.yaml # 注意此处文件名不可相同
-  #   health-check:
-  #     enable: true
-  #     interval: 600
-  #     url: https://www.youtube.com/generate_204
-  # 此处只是订阅示例，如果没有订阅链接的使用需求，此处及 proxy-groups 的相关内容可删除
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 
-  #Airport A: 
-  #  type: http
-  #  url:  ""
-  #  interval: 3600
-  #  filter: "^((?!(Traffic|Expire)).)*$"
-  #  path: ./Proxy/main.yaml
-  #  health-check:
-  #    enable: true
-  #    interval: 600
-  #    url: https://www.youtube.com/generate_204
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+
+
+
+proxy-providers:
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
 
   Airport B:      
@@ -342,66 +342,66 @@ proxy-providers:
       interval: 600
       url: https://www.youtube.com/generate_204    
  
-  #MIXED US:      
-  #  type: http
-  #  url:  ""
-  #  interval: 3600
-  #  path: ./Proxy/us.yaml
-  #  filter: '美国'
-  #  health-check:
-  #    enable: true
-  #    interval: 600
-  #    url: https://www.youtube.com/generate_204    
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   
 
 proxy-groups:
-# 策略组示例请查阅 Clash 项目 README 以使用最新格式：https://github.com/Dreamacro/clash/wiki/configuration
 
-#
-# 策略组说明
-#
-# 「MATCH」类似 Surge 的「Final」，此处用于选择白名单模式(PROXY 策略)和黑名单模式(DIRECT 策略)
-#
-# 「Streaming」和「StreamingSE」比较好理解，有专用于流媒体的节点就设置到其中，如果没有「StreamingSE」的需求可以连带 Rule 部分一起删掉，「Streaming」需至少保留 Rule，用「PROXY」即可。
-#
-# 「PROXY」是代理规则策略，它可以指定为某个节点或嵌套一个其他策略组，如：「自动测试」、「Fallback」或「负载均衡」的策略组，关于这 3 个策略组的具体示例可以看官方示例：https://github.com/Dreamacro/clash
-#
 
-  # 注意此处的「use」而不是「proxies」，当然也可以不用在此先嵌套一个策略组进行选择，可以直接使用，如
-  #
-  # # 代理节点选择
-  # - name: "PROXY"
-  #   type: select
-  #   use:
-  #     - DuckDuckGo # 嵌套使用订阅节点策略组
-  #   proxies:
-  #     - Fallback
-  #     - 1
-  #     - 2
-  #     - 3
-  #
-  # 但如果订阅节点很多选起来就很麻烦，不如先嵌套一个策略组进行手动或自动的选择。
 
-  # 手动选择订阅节点
-  #- name: "DuckDuckGo"
-  #  type: select # 亦可使用 fallback 或 load-balance
-  #  use: # 注意此处是「use」
-  #    - DuckDuckGoList # 这是上面「proxy-providers」的名称
+
+
+
+
+
+
+
+
+
   
-  # - name: "US"
-  #   type: select # 亦可使用 fallback 或 load-balance
-  #   use: # 注意此处是「use」
-  #     - DuckDuckGoUS # 这是上面「proxy-providers」的名称
   
-  # 代理节点选择
-  #- name: "PROXY"
-  #  type: select
-  #  proxies:
-  #    - Fallback
-  #    - main
-  #    - backup
-  #    - DIRECT
-  #    - DuckDuckGo # 嵌套使用订阅节点策略组
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 
   - name: "✈️PROXY"
     type: select
@@ -409,11 +409,11 @@ proxy-groups:
       - Auto
       - Manual
 
-  # Fallback 比较实用的策略组类型，用于测试服务器节点的可用性，当第一个节点不可用时切换到第二个，以此类推。
+  
   - name: "Auto"
     type: fallback
     proxies:
-      #- main(Auto)
+      
       - backup(Auto)
     url: 'https://www.youtube.com/generate_204'
     interval: 300 
@@ -427,7 +427,7 @@ proxy-groups:
     tolerance: 40
     filter: '香港|hk|hong'
     lazy: false
-    #disable-udp: true
+    
 
   - name: "backup(Auto)"
     type: url-test
@@ -436,14 +436,14 @@ proxy-groups:
     url: 'https://www.youtube.com/generate_204'
     interval: 300
     tolerance: 40
-    #lazy: true
-    #filter: '港|hk|hong'
-   #disable-udp: true
+    
+    
+   
 
   - name: "Manual"
     type: select
     proxies:
-      #- main (Manual)
+      
       - backup (Manual)
 
   - name: "main (Manual)"
@@ -455,12 +455,12 @@ proxy-groups:
     type: select
     use:    
      - Airport B 
-  #########################################################Safe protection
+  
   
 rule-providers:
 
   
-# 规则
+
 rules:
 
     - MATCH,✈️PROXY
