--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -191,7 +191,7 @@ dns:
   nameserver-policy:
       #"rule-set:ProxyDNS": [tls://dns.google,https://fdyhoqa   .cloudflare-gateway.com/dns-query]
       "geosite:cn,private,microsoft@cn,apple@cn,apple-cn": [223.6.6.6,119.29.29.29]
-      "rule-set:SteamCN,Speedtest,BILIBILIHMT_domain,Epicgames,Rockstar,DomesticDNS": [223.6.6.6,119.29.29.29]
+      "rule-set:SteamCN,Epicgames,Rockstar,DomesticDNS": [223.6.6.6,119.29.29.29]
   # "domain-set:global,dns": 8.8.8.8 # global，dns 为 rule-providers 中的名为 global 和 dns 的规则提供器名字，且 behavior 必须为 domain 
 
 
