--- a/Clash config/Router(redir-host).yaml
+++ b/Clash config/Router(redir-host).yaml
@@ -894,6 +894,7 @@ rules:
     
     - GEOSITE,openai,🇺🇸AI
     - DOMAIN,bard.google.com,🇺🇸AI
+    - DOMAIN-SUFFIX,gemini.google.com,🇺🇸AI
     - DOMAIN-SUFFIX,anthropic.com,🇺🇸AI
     - DOMAIN-SUFFIX,claude.ai,🇺🇸AI
 
