gamedownloads.rockstargames.com

--- a/domestic.yaml
+++ b/domestic.yaml
@@ -114,3 +114,6 @@ payload:
   #epicgames download
   - DOMAIN,cloudflare.epicgamescdn.com
 
+  #ROCKSTAR DOWNLOAD
+  - DOMAIN,gamedownloads.rockstargames.com
+
