--- a/domestic.yaml
+++ b/domestic.yaml
@@ -113,7 +113,8 @@ payload:
 
   #epicgames download
   - DOMAIN,cloudflare.epicgamescdn.com
-
+  - DOMAIN,ipv4.egdownload.fastly-edge.com
+  
   #ROCKSTAR DOWNLOAD
   - DOMAIN,gamedownloads.rockstargames.com
   - DOMAIN,gamedownloads-rockstargames-com.akamaized.net
